# AndroidHookDemos

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
DexDump/: CMakeLists.txt  build.gradle
DexDump/src/main/: AndroidManifest.xml
DexDump/src/main/c/: DexDumper.c  DexDumper.h
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: privacy.txt  userTp.txt
app/src/main/cpp/: native_str.cpp
app/src/main/java/com/okex/: LogUtil.java  OkCheSplashActivity.java  OkManager.java  PrivacyActivity.java  SplashNoPrivacyActivity.java  UserProtocolActivity.java  WebActivity$1.smali  WebActivity$2.smali  WebActivity$3$1.smali  WebActivity$3.smali  WebActivity.java  WebActivity.smali
app/src/main/java/com/okex/net/: ApiModel.java  ErrorStatus.java  HttpClientUtils.java  NetRespListener.java
app/src/main/java/com/okex/util/: DownloadFileTool.java  IdUtil.java  LocUtil.java  MD5Tools.java
app/src/main/java/com/txxia/demos/: App.kt
app/src/main/res/layout/: activity_jni.xml  activity_main.xml  activity_main_hooed.xml  activity_protocol_ex.xml  activity_signature_hook.xml  activity_splash_ex.xml  activity_web_ex.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_hook.xml
app/src/main/res/values/: colors.xml  public.xml  strings.xml  styles.xml
app/src/main/res/xml/: network_security_config.xml  okex_file_paths.xml
executableapp/: CMakeLists.txt  build.gradle
executableapp/src/main/: AndroidManifest.xml
executableapp/src/main/cpp/: main.cpp
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
